[BUG #7219] qx.ui.mobile.form.SelectBox height overflow
* Assigned pointer-events:none to scrollIndicator of scrollComposite

--- a/framework/source/resource/qx/mobile/css/ios.css
+++ b/framework/source/resource/qx/mobile/css/ios.css
@@ -80,6 +80,9 @@ input::-webkit-inner-spin-button {
 .scroll-container-child {
   position: relative; }
 
+.scroll-container.scrollable-top:before, .scroll-container.scrollable-bottom:after {
+  pointer-events: none; }
+
 .animationParent {
   -webkit-perspective: 800;
   -moz-perspective: 800;
