--- a/framework/source/resource/qx/mobile/scss/common/_scroller.scss
+++ b/framework/source/resource/qx/mobile/scss/common/_scroller.scss
@@ -24,3 +24,7 @@
 .scroll-container-child {
   position:relative;
 }
+
+.scroll-container.scrollable-top:before, .scroll-container.scrollable-bottom:after {
+  pointer-events:none;
+}
